--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
 <body>
 	
   <!--header-->
-  <div class="header">
+  <header>
+    <nav>
 
-  </div><!--end of header-->
+      <h1>
+        <a href="" class="logo">Your Logo</a>
+      </h1>
+      
+      <ul>
+        <li><a href="">About</a></li>
+        <li><a href="">Services </a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Blog</a></li>
+      </ul>
+      <button class="toggle-menu" aria-label="Responsive Navigation Menu">☰</button>
+    </nav>
+
+  </header><!--end of header-->
 
 <!--body and summary jumbotron has background image-->
   <div class="jumbotron">
