--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  
+    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
 
     
 </head>
